Add modulus processor

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
     </article>
     <script src="/assets/js/processors/index.js"></script>
     <script src="/assets/js/processors/grayscale.js"></script>
+    <script src="/assets/js/processors/modulus.js"></script>
     <script src="/assets/js/index.js"></script>
 </section>
 </body>
