Add favicon.ico and relative urls

--- a/index.html
+++ b/index.html
@@ -10,14 +10,15 @@
 */
 -->
 <head>
+    <base href="https://alexandreelise.github.io/velvet/">
     <meta charset="UTF-8">
     <title>Velvet: Realtime Video Processing In Pure Javascript</title>
     <meta name="description"
           content="Velvet: Realtime Video Processing In Pure Javascript as an experiment to learn javascript more seriously. Initiated by Mr Alexandre ELISÉ, inspired by MDN article https://developer.mozilla.org/en-US/docs/Web/API/Canvas_API/Manipulating_video_using_canvas">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/assets/css/style.css">
-    <script src="/assets/js/core/index.js"></script>
+    <link rel="stylesheet" href="assets/css/style.css">
+    <script src="assets/js/core/index.js"></script>
 </head>
 <body>
 <section class="velvet__app--container">
@@ -60,10 +61,10 @@
             </canvas>
         </figure>
     </article>
-    <script src="/assets/js/processors/index.js"></script>
-    <script src="/assets/js/processors/grayscale.js"></script>
-    <script src="/assets/js/processors/modulus.js"></script>
-    <script src="/assets/js/index.js"></script>
+    <script src="assets/js/processors/index.js"></script>
+    <script src="assets/js/processors/grayscale.js"></script>
+    <script src="assets/js/processors/modulus.js"></script>
+    <script src="assets/js/index.js"></script>
 </section>
 </body>
 </html>
