Add bigger favicon. Fix missing relative url

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
           content="Velvet: Realtime Video Processing In Pure Javascript as an experiment to learn javascript more seriously. Initiated by Mr Alexandre ELISÉ, inspired by MDN article https://developer.mozilla.org/en-US/docs/Web/API/Canvas_API/Manipulating_video_using_canvas">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="assets/images/favicon-32x32.png">
     <link rel="stylesheet" href="assets/css/style.css">
     <script src="assets/js/core/index.js"></script>
 </head>
@@ -49,7 +50,7 @@
                 <p class="velvet__output"></p>
             </figcaption>
             <video class="velvet__video velvet__video--constraints" src="" width="480" height="270"
-                   poster="/assets/images/alexandree-velvet-js-wallpaper.png" controls>Your browser doesn't support
+                   poster="assets/images/alexandree-velvet-js-wallpaper.png" controls>Your browser doesn't support
                 video
                 tag.
             </video>
