Add activeProcessors feature

--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
             </canvas>
         </figure>
     </article>
-    <script src="assets/js/processors/index.js"></script>
-    <script src="assets/js/processors/grayscale.js"></script>
-    <script src="assets/js/processors/modulus.js"></script>
-    <script src="assets/js/index.js"></script>
+    <script defer src="assets/js/processors/index.js"></script>
+    <script defer src="assets/js/processors/grayscale.js"></script>
+    <script defer src="assets/js/processors/modulus.js"></script>
+    <script defer src="assets/js/index.js"></script>
 </section>
 </body>
 </html>
