Revert "Edit base url of velvet project to dev env url"
This reverts commit 496cc6fb77f2f37664a413a6842b97019bc5e529.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 */
 -->
 <head>
-    <base href="https://alex.test/velvet/">
+    <base href="https://alexandreelise.github.io/velvet/">
     <meta charset="UTF-8">
     <title>Velvet: Realtime Video Processing In Pure Javascript</title>
     <meta name="description"
